asgn3/parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Unused terminals:

    PLUS
    USING
    LSHIFT
    CHARCONST
    DOUBLEQUOTE
    BACKSLASH
    MINUSEQUAL
    LEQ
    SHORT
    GT
    RSHIFT
    MOD
    STRCONST
    NEW
    IF
    PLUSEQUAL
    ELSE
    TIMES
    BREAK
    XOR
    SINGLEQUOTE
    NE
    NEWLINE
    LNOT
    INTCONST
    LT
    MINUS
    RETURN
    EQ
    SIZEOF
    STRING
    COLON
    NULL
    COMMENTDELIM
    GOTO
    AND
    CONTINUE
    WHILE
    CONOR
    COMMENTSLINE
    INCREMENT
    GEQ
    CONAND
    DECREMENT
    OR
    DIVIDE

Grammar

Rule 0     S' -> compilation_unit
Rule 1     start -> compilation_unit
Rule 2     compilation_unit -> class_declarations
Rule 3     class_declarations -> class_declarations class_declaration
Rule 4     class_declarations -> class_declaration
Rule 5     class_declaration -> class_modifiers CLASS identifier class_body TERMINATOR
Rule 6     class_declaration -> CLASS identifier class_body TERMINATOR
Rule 7     class_declaration -> CLASS identifier class_body
Rule 8     class_declaration -> class_modifiers CLASS identifier class_body
Rule 9     class_modifiers -> class_modifier
Rule 10    class_modifiers -> class_modifiers class_modifier
Rule 11    class_modifier -> PUBLIC
Rule 12    class_modifier -> PRIVATE
Rule 13    class_body -> LBRACE class_member_declarations RBRACE
Rule 14    class_body -> LBRACE RBRACE
Rule 15    identifier -> IDENTIFIER
Rule 16    class_member_declarations -> class_member_declaration
Rule 17    class_member_declarations -> class_member_declarations class_member_declaration
Rule 18    class_member_declaration -> field_declaration
Rule 19    class_member_declaration -> method_declaration
Rule 20    class_member_declaration -> constructor_declaration
Rule 21    class_member_declaration -> destructor_declaration
Rule 22    field_declaration -> field_modifiers type variable_declarators TERMINATOR
Rule 23    field_declaration -> type variable_declarators TERMINATOR
Rule 24    field_modifiers -> field_modifier
Rule 25    field_modifiers -> field_modifiers field_modifier
Rule 26    field_modifier -> PUBLIC
Rule 27    field_modifier -> PRIVATE
Rule 28    type -> reference_type
Rule 29    type -> type_parameter
Rule 30    reference_type -> class_type
Rule 31    reference_type -> array_type
Rule 32    class_type -> type_name
Rule 33    class_type -> OBJECT
Rule 34    type_name -> proper_identifier
Rule 35    proper_identifier -> identifier
Rule 36    proper_identifier -> prefix identifier
Rule 37    prefix -> identifier MEMBERACCESS
Rule 38    prefix -> prefix identifier MEMBERACCESS
Rule 39    array_type -> non_array_type LBRACKET RBRACKET
Rule 40    non_array_type -> type
Rule 41    type_parameter -> identifier
Rule 42    type_parameter -> INT
Rule 43    type_parameter -> CHAR
Rule 44    variable_declarators -> variable_declarator
Rule 45    variable_declarators -> variable_declarators COMMA variable_declarator
Rule 46    variable_declarator -> identifier
Rule 47    variable_declarator -> identifier EQUALS variable_initializer
Rule 48    variable_initializer -> expression
Rule 49    variable_initializer -> array_initializer
Rule 50    expression -> empty
Rule 51    array_initializer -> LBRACE variable_initializer_list RBRACE
Rule 52    array_initializer -> LBRACE RBRACE
Rule 53    array_initializer -> LBRACE variable_initializer_list COMMA RBRACE
Rule 54    variable_initializer_list -> variable_initializer
Rule 55    variable_initializer_list -> variable_initializer_list COMMA variable_initializer
Rule 56    method_declaration -> method_header
Rule 57    method_declaration -> method_body
Rule 58    method_header -> method_modifiers return_type member_name LPAREN RPAREN
Rule 59    method_modifiers -> method_modifier
Rule 60    method_modifiers -> method_modifiers method_modifier
Rule 61    method_modifier -> PUBLIC
Rule 62    method_modifier -> PRIVATE
Rule 63    return_type -> type
Rule 64    return_type -> VOID
Rule 65    member_name -> identifier
Rule 66    method_body -> block
Rule 67    method_body -> TERMINATOR
Rule 68    fixed_parameters -> fixed_parameter
Rule 69    fixed_parameters -> fixed_parameters COMMA fixed_parameter
Rule 70    fixed_parameter -> type identifier default_argument
Rule 71    fixed_parameter -> type identifier
Rule 72    default_argument -> EQUALS expression
Rule 73    constructor_declaration -> constructor_declarator constructor_body
Rule 74    constructor_declarator -> identifier LPAREN fixed_parameters RPAREN
Rule 75    constructor_declarator -> identifier LPAREN RPAREN
Rule 76    constructor_body -> block
Rule 77    constructor_body -> TERMINATOR
Rule 78    destructor_declaration -> TILDE identifier LPAREN RPAREN destructor_body
Rule 79    destructor_body -> block
Rule 80    destructor_body -> TERMINATOR
Rule 81    block -> LBRACE RBRACE
Rule 82    empty -> <empty>

Terminals, with rules where they appear

AND                  : 
BACKSLASH            : 
BREAK                : 
CHAR                 : 43
CHARCONST            : 
CLASS                : 5 6 7 8
COLON                : 
COMMA                : 45 53 55 69
COMMENTDELIM         : 
COMMENTSLINE         : 
CONAND               : 
CONOR                : 
CONTINUE             : 
DECREMENT            : 
DIVIDE               : 
DOUBLEQUOTE          : 
ELSE                 : 
EQ                   : 
EQUALS               : 47 72
GEQ                  : 
GOTO                 : 
GT                   : 
IDENTIFIER           : 15
IF                   : 
INCREMENT            : 
INT                  : 42
INTCONST             : 
LBRACE               : 13 14 51 52 53 81
LBRACKET             : 39
LEQ                  : 
LNOT                 : 
LPAREN               : 58 74 75 78
LSHIFT               : 
LT                   : 
MEMBERACCESS         : 37 38
MINUS                : 
MINUSEQUAL           : 
MOD                  : 
NE                   : 
NEW                  : 
NEWLINE              : 
NULL                 : 
OBJECT               : 33
OR                   : 
PLUS                 : 
PLUSEQUAL            : 
PRIVATE              : 12 27 62
PUBLIC               : 11 26 61
RBRACE               : 13 14 51 52 53 81
RBRACKET             : 39
RETURN               : 
RPAREN               : 58 74 75 78
RSHIFT               : 
SHORT                : 
SINGLEQUOTE          : 
SIZEOF               : 
STRCONST             : 
STRING               : 
TERMINATOR           : 5 6 22 23 67 77 80
TILDE                : 78
TIMES                : 
USING                : 
VOID                 : 64
WHILE                : 
XOR                  : 
error                : 

Nonterminals, with rules where they appear

array_initializer    : 49
array_type           : 31
block                : 66 76 79
class_body           : 5 6 7 8
class_declaration    : 3 4
class_declarations   : 2 3
class_member_declaration : 16 17
class_member_declarations : 13 17
class_modifier       : 9 10
class_modifiers      : 5 8 10
class_type           : 30
compilation_unit     : 1 0
constructor_body     : 73
constructor_declaration : 20
constructor_declarator : 73
default_argument     : 70
destructor_body      : 78
destructor_declaration : 21
empty                : 50
expression           : 48 72
field_declaration    : 18
field_modifier       : 24 25
field_modifiers      : 22 25
fixed_parameter      : 68 69
fixed_parameters     : 69 74
identifier           : 5 6 7 8 35 36 37 38 41 46 47 65 70 71 74 75 78
member_name          : 58
method_body          : 57
method_declaration   : 19
method_header        : 56
method_modifier      : 59 60
method_modifiers     : 58 60
non_array_type       : 39
prefix               : 36 38
proper_identifier    : 34
reference_type       : 28
return_type          : 58
start                : 
type                 : 22 23 40 63 70 71
type_name            : 32
type_parameter       : 29
variable_declarator  : 44 45
variable_declarators : 22 23 45
variable_initializer : 47 54 55
variable_initializer_list : 51 53 55

Parsing method: LALR

state 0

    (0) S' -> . compilation_unit
    (2) compilation_unit -> . class_declarations
    (3) class_declarations -> . class_declarations class_declaration
    (4) class_declarations -> . class_declaration
    (5) class_declaration -> . class_modifiers CLASS identifier class_body TERMINATOR
    (6) class_declaration -> . CLASS identifier class_body TERMINATOR
    (7) class_declaration -> . CLASS identifier class_body
    (8) class_declaration -> . class_modifiers CLASS identifier class_body
    (9) class_modifiers -> . class_modifier
    (10) class_modifiers -> . class_modifiers class_modifier
    (11) class_modifier -> . PUBLIC
    (12) class_modifier -> . PRIVATE

    CLASS           shift and go to state 8
    PUBLIC          shift and go to state 5
    PRIVATE         shift and go to state 7

    class_modifiers                shift and go to state 1
    compilation_unit               shift and go to state 3
    class_modifier                 shift and go to state 4
    class_declarations             shift and go to state 6
    class_declaration              shift and go to state 2

state 1

    (5) class_declaration -> class_modifiers . CLASS identifier class_body TERMINATOR
    (8) class_declaration -> class_modifiers . CLASS identifier class_body
    (10) class_modifiers -> class_modifiers . class_modifier
    (11) class_modifier -> . PUBLIC
    (12) class_modifier -> . PRIVATE

    CLASS           shift and go to state 10
    PUBLIC          shift and go to state 5
    PRIVATE         shift and go to state 7

    class_modifier                 shift and go to state 9

state 2

    (4) class_declarations -> class_declaration .

    CLASS           reduce using rule 4 (class_declarations -> class_declaration .)
    PUBLIC          reduce using rule 4 (class_declarations -> class_declaration .)
    PRIVATE         reduce using rule 4 (class_declarations -> class_declaration .)
    $end            reduce using rule 4 (class_declarations -> class_declaration .)


state 3

    (0) S' -> compilation_unit .



state 4

    (9) class_modifiers -> class_modifier .

    CLASS           reduce using rule 9 (class_modifiers -> class_modifier .)
    PUBLIC          reduce using rule 9 (class_modifiers -> class_modifier .)
    PRIVATE         reduce using rule 9 (class_modifiers -> class_modifier .)


state 5

    (11) class_modifier -> PUBLIC .

    CLASS           reduce using rule 11 (class_modifier -> PUBLIC .)
    PUBLIC          reduce using rule 11 (class_modifier -> PUBLIC .)
    PRIVATE         reduce using rule 11 (class_modifier -> PUBLIC .)


state 6

    (2) compilation_unit -> class_declarations .
    (3) class_declarations -> class_declarations . class_declaration
    (5) class_declaration -> . class_modifiers CLASS identifier class_body TERMINATOR
    (6) class_declaration -> . CLASS identifier class_body TERMINATOR
    (7) class_declaration -> . CLASS identifier class_body
    (8) class_declaration -> . class_modifiers CLASS identifier class_body
    (9) class_modifiers -> . class_modifier
    (10) class_modifiers -> . class_modifiers class_modifier
    (11) class_modifier -> . PUBLIC
    (12) class_modifier -> . PRIVATE

    $end            reduce using rule 2 (compilation_unit -> class_declarations .)
    CLASS           shift and go to state 8
    PUBLIC          shift and go to state 5
    PRIVATE         shift and go to state 7

    class_modifiers                shift and go to state 1
    class_modifier                 shift and go to state 4
    class_declaration              shift and go to state 11

state 7

    (12) class_modifier -> PRIVATE .

    CLASS           reduce using rule 12 (class_modifier -> PRIVATE .)
    PUBLIC          reduce using rule 12 (class_modifier -> PRIVATE .)
    PRIVATE         reduce using rule 12 (class_modifier -> PRIVATE .)


state 8

    (6) class_declaration -> CLASS . identifier class_body TERMINATOR
    (7) class_declaration -> CLASS . identifier class_body
    (15) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 12

    identifier                     shift and go to state 13

state 9

    (10) class_modifiers -> class_modifiers class_modifier .

    CLASS           reduce using rule 10 (class_modifiers -> class_modifiers class_modifier .)
    PUBLIC          reduce using rule 10 (class_modifiers -> class_modifiers class_modifier .)
    PRIVATE         reduce using rule 10 (class_modifiers -> class_modifiers class_modifier .)


state 10

    (5) class_declaration -> class_modifiers CLASS . identifier class_body TERMINATOR
    (8) class_declaration -> class_modifiers CLASS . identifier class_body
    (15) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 12

    identifier                     shift and go to state 14

state 11

    (3) class_declarations -> class_declarations class_declaration .

    CLASS           reduce using rule 3 (class_declarations -> class_declarations class_declaration .)
    PUBLIC          reduce using rule 3 (class_declarations -> class_declarations class_declaration .)
    PRIVATE         reduce using rule 3 (class_declarations -> class_declarations class_declaration .)
    $end            reduce using rule 3 (class_declarations -> class_declarations class_declaration .)


state 12

    (15) identifier -> IDENTIFIER .

    LBRACE          reduce using rule 15 (identifier -> IDENTIFIER .)
    MEMBERACCESS    reduce using rule 15 (identifier -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 15 (identifier -> IDENTIFIER .)
    LBRACKET        reduce using rule 15 (identifier -> IDENTIFIER .)
    LPAREN          reduce using rule 15 (identifier -> IDENTIFIER .)
    EQUALS          reduce using rule 15 (identifier -> IDENTIFIER .)
    RPAREN          reduce using rule 15 (identifier -> IDENTIFIER .)
    COMMA           reduce using rule 15 (identifier -> IDENTIFIER .)
    TERMINATOR      reduce using rule 15 (identifier -> IDENTIFIER .)


state 13

    (6) class_declaration -> CLASS identifier . class_body TERMINATOR
    (7) class_declaration -> CLASS identifier . class_body
    (13) class_body -> . LBRACE class_member_declarations RBRACE
    (14) class_body -> . LBRACE RBRACE

    LBRACE          shift and go to state 16

    class_body                     shift and go to state 15

state 14

    (5) class_declaration -> class_modifiers CLASS identifier . class_body TERMINATOR
    (8) class_declaration -> class_modifiers CLASS identifier . class_body
    (13) class_body -> . LBRACE class_member_declarations RBRACE
    (14) class_body -> . LBRACE RBRACE

    LBRACE          shift and go to state 16

    class_body                     shift and go to state 17

state 15

    (6) class_declaration -> CLASS identifier class_body . TERMINATOR
    (7) class_declaration -> CLASS identifier class_body .

    TERMINATOR      shift and go to state 18
    CLASS           reduce using rule 7 (class_declaration -> CLASS identifier class_body .)
    PUBLIC          reduce using rule 7 (class_declaration -> CLASS identifier class_body .)
    PRIVATE         reduce using rule 7 (class_declaration -> CLASS identifier class_body .)
    $end            reduce using rule 7 (class_declaration -> CLASS identifier class_body .)


state 16

    (13) class_body -> LBRACE . class_member_declarations RBRACE
    (14) class_body -> LBRACE . RBRACE
    (16) class_member_declarations -> . class_member_declaration
    (17) class_member_declarations -> . class_member_declarations class_member_declaration
    (18) class_member_declaration -> . field_declaration
    (19) class_member_declaration -> . method_declaration
    (20) class_member_declaration -> . constructor_declaration
    (21) class_member_declaration -> . destructor_declaration
    (22) field_declaration -> . field_modifiers type variable_declarators TERMINATOR
    (23) field_declaration -> . type variable_declarators TERMINATOR
    (56) method_declaration -> . method_header
    (57) method_declaration -> . method_body
    (73) constructor_declaration -> . constructor_declarator constructor_body
    (78) destructor_declaration -> . TILDE identifier LPAREN RPAREN destructor_body
    (24) field_modifiers -> . field_modifier
    (25) field_modifiers -> . field_modifiers field_modifier
    (28) type -> . reference_type
    (29) type -> . type_parameter
    (58) method_header -> . method_modifiers return_type member_name LPAREN RPAREN
    (66) method_body -> . block
    (67) method_body -> . TERMINATOR
    (74) constructor_declarator -> . identifier LPAREN fixed_parameters RPAREN
    (75) constructor_declarator -> . identifier LPAREN RPAREN
    (26) field_modifier -> . PUBLIC
    (27) field_modifier -> . PRIVATE
    (30) reference_type -> . class_type
    (31) reference_type -> . array_type
    (41) type_parameter -> . identifier
    (42) type_parameter -> . INT
    (43) type_parameter -> . CHAR
    (59) method_modifiers -> . method_modifier
    (60) method_modifiers -> . method_modifiers method_modifier
    (81) block -> . LBRACE RBRACE
    (15) identifier -> . IDENTIFIER
    (32) class_type -> . type_name
    (33) class_type -> . OBJECT
    (39) array_type -> . non_array_type LBRACKET RBRACKET
    (61) method_modifier -> . PUBLIC
    (62) method_modifier -> . PRIVATE
    (34) type_name -> . proper_identifier
    (40) non_array_type -> . type
    (35) proper_identifier -> . identifier
    (36) proper_identifier -> . prefix identifier
    (37) prefix -> . identifier MEMBERACCESS
    (38) prefix -> . prefix identifier MEMBERACCESS

    RBRACE          shift and go to state 40
    TILDE           shift and go to state 29
    TERMINATOR      shift and go to state 37
    PUBLIC          shift and go to state 39
    PRIVATE         shift and go to state 21
    INT             shift and go to state 28
    CHAR            shift and go to state 44
    LBRACE          shift and go to state 48
    IDENTIFIER      shift and go to state 12
    OBJECT          shift and go to state 43

    field_declaration              shift and go to state 19
    array_type                     shift and go to state 34
    destructor_declaration         shift and go to state 35
    field_modifier                 shift and go to state 20
    method_declaration             shift and go to state 36
    constructor_declaration        shift and go to state 38
    class_member_declaration       shift and go to state 46
    proper_identifier              shift and go to state 23
    class_type                     shift and go to state 32
    class_member_declarations      shift and go to state 22
    method_header                  shift and go to state 41
    method_modifier                shift and go to state 42
    block                          shift and go to state 24
    method_body                    shift and go to state 26
    reference_type                 shift and go to state 45
    type                           shift and go to state 27
    method_modifiers               shift and go to state 47
    field_modifiers                shift and go to state 30
    prefix                         shift and go to state 31
    type_name                      shift and go to state 51
    non_array_type                 shift and go to state 25
    constructor_declarator         shift and go to state 33
    type_parameter                 shift and go to state 50
    identifier                     shift and go to state 49

state 17

    (5) class_declaration -> class_modifiers CLASS identifier class_body . TERMINATOR
    (8) class_declaration -> class_modifiers CLASS identifier class_body .

    TERMINATOR      shift and go to state 52
    CLASS           reduce using rule 8 (class_declaration -> class_modifiers CLASS identifier class_body .)
    PUBLIC          reduce using rule 8 (class_declaration -> class_modifiers CLASS identifier class_body .)
    PRIVATE         reduce using rule 8 (class_declaration -> class_modifiers CLASS identifier class_body .)
    $end            reduce using rule 8 (class_declaration -> class_modifiers CLASS identifier class_body .)


state 18

    (6) class_declaration -> CLASS identifier class_body TERMINATOR .

    CLASS           reduce using rule 6 (class_declaration -> CLASS identifier class_body TERMINATOR .)
    PUBLIC          reduce using rule 6 (class_declaration -> CLASS identifier class_body TERMINATOR .)
    PRIVATE         reduce using rule 6 (class_declaration -> CLASS identifier class_body TERMINATOR .)
    $end            reduce using rule 6 (class_declaration -> CLASS identifier class_body TERMINATOR .)


state 19

    (18) class_member_declaration -> field_declaration .

    RBRACE          reduce using rule 18 (class_member_declaration -> field_declaration .)
    TILDE           reduce using rule 18 (class_member_declaration -> field_declaration .)
    TERMINATOR      reduce using rule 18 (class_member_declaration -> field_declaration .)
    PUBLIC          reduce using rule 18 (class_member_declaration -> field_declaration .)
    PRIVATE         reduce using rule 18 (class_member_declaration -> field_declaration .)
    INT             reduce using rule 18 (class_member_declaration -> field_declaration .)
    CHAR            reduce using rule 18 (class_member_declaration -> field_declaration .)
    LBRACE          reduce using rule 18 (class_member_declaration -> field_declaration .)
    IDENTIFIER      reduce using rule 18 (class_member_declaration -> field_declaration .)
    OBJECT          reduce using rule 18 (class_member_declaration -> field_declaration .)


state 20

    (24) field_modifiers -> field_modifier .

    PUBLIC          reduce using rule 24 (field_modifiers -> field_modifier .)
    PRIVATE         reduce using rule 24 (field_modifiers -> field_modifier .)
    INT             reduce using rule 24 (field_modifiers -> field_modifier .)
    CHAR            reduce using rule 24 (field_modifiers -> field_modifier .)
    OBJECT          reduce using rule 24 (field_modifiers -> field_modifier .)
    IDENTIFIER      reduce using rule 24 (field_modifiers -> field_modifier .)


state 21

    (27) field_modifier -> PRIVATE .
    (62) method_modifier -> PRIVATE .

  ! reduce/reduce conflict for PUBLIC resolved using rule 27 (field_modifier -> PRIVATE .)
  ! reduce/reduce conflict for PRIVATE resolved using rule 27 (field_modifier -> PRIVATE .)
  ! reduce/reduce conflict for INT resolved using rule 27 (field_modifier -> PRIVATE .)
  ! reduce/reduce conflict for CHAR resolved using rule 27 (field_modifier -> PRIVATE .)
  ! reduce/reduce conflict for OBJECT resolved using rule 27 (field_modifier -> PRIVATE .)
  ! reduce/reduce conflict for IDENTIFIER resolved using rule 27 (field_modifier -> PRIVATE .)
    PUBLIC          reduce using rule 27 (field_modifier -> PRIVATE .)
    PRIVATE         reduce using rule 27 (field_modifier -> PRIVATE .)
    INT             reduce using rule 27 (field_modifier -> PRIVATE .)
    CHAR            reduce using rule 27 (field_modifier -> PRIVATE .)
    OBJECT          reduce using rule 27 (field_modifier -> PRIVATE .)
    IDENTIFIER      reduce using rule 27 (field_modifier -> PRIVATE .)
    VOID            reduce using rule 62 (method_modifier -> PRIVATE .)

  ! PUBLIC          [ reduce using rule 62 (method_modifier -> PRIVATE .) ]
  ! PRIVATE         [ reduce using rule 62 (method_modifier -> PRIVATE .) ]
  ! INT             [ reduce using rule 62 (method_modifier -> PRIVATE .) ]
  ! CHAR            [ reduce using rule 62 (method_modifier -> PRIVATE .) ]
  ! OBJECT          [ reduce using rule 62 (method_modifier -> PRIVATE .) ]
  ! IDENTIFIER      [ reduce using rule 62 (method_modifier -> PRIVATE .) ]


state 22

    (13) class_body -> LBRACE class_member_declarations . RBRACE
    (17) class_member_declarations -> class_member_declarations . class_member_declaration
    (18) class_member_declaration -> . field_declaration
    (19) class_member_declaration -> . method_declaration
    (20) class_member_declaration -> . constructor_declaration
    (21) class_member_declaration -> . destructor_declaration
    (22) field_declaration -> . field_modifiers type variable_declarators TERMINATOR
    (23) field_declaration -> . type variable_declarators TERMINATOR
    (56) method_declaration -> . method_header
    (57) method_declaration -> . method_body
    (73) constructor_declaration -> . constructor_declarator constructor_body
    (78) destructor_declaration -> . TILDE identifier LPAREN RPAREN destructor_body
    (24) field_modifiers -> . field_modifier
    (25) field_modifiers -> . field_modifiers field_modifier
    (28) type -> . reference_type
    (29) type -> . type_parameter
    (58) method_header -> . method_modifiers return_type member_name LPAREN RPAREN
    (66) method_body -> . block
    (67) method_body -> . TERMINATOR
    (74) constructor_declarator -> . identifier LPAREN fixed_parameters RPAREN
    (75) constructor_declarator -> . identifier LPAREN RPAREN
    (26) field_modifier -> . PUBLIC
    (27) field_modifier -> . PRIVATE
    (30) reference_type -> . class_type
    (31) reference_type -> . array_type
    (41) type_parameter -> . identifier
    (42) type_parameter -> . INT
    (43) type_parameter -> . CHAR
    (59) method_modifiers -> . method_modifier
    (60) method_modifiers -> . method_modifiers method_modifier
    (81) block -> . LBRACE RBRACE
    (15) identifier -> . IDENTIFIER
    (32) class_type -> . type_name
    (33) class_type -> . OBJECT
    (39) array_type -> . non_array_type LBRACKET RBRACKET
    (61) method_modifier -> . PUBLIC
    (62) method_modifier -> . PRIVATE
    (34) type_name -> . proper_identifier
    (40) non_array_type -> . type
    (35) proper_identifier -> . identifier
    (36) proper_identifier -> . prefix identifier
    (37) prefix -> . identifier MEMBERACCESS
    (38) prefix -> . prefix identifier MEMBERACCESS

    RBRACE          shift and go to state 53
    TILDE           shift and go to state 29
    TERMINATOR      shift and go to state 37
    PUBLIC          shift and go to state 39
    PRIVATE         shift and go to state 21
    INT             shift and go to state 28
    CHAR            shift and go to state 44
    LBRACE          shift and go to state 48
    IDENTIFIER      shift and go to state 12
    OBJECT          shift and go to state 43

    field_declaration              shift and go to state 19
    array_type                     shift and go to state 34
    destructor_declaration         shift and go to state 35
    field_modifier                 shift and go to state 20
    method_declaration             shift and go to state 36
    constructor_declaration        shift and go to state 38
    class_member_declaration       shift and go to state 54
    proper_identifier              shift and go to state 23
    class_type                     shift and go to state 32
    method_header                  shift and go to state 41
    method_modifier                shift and go to state 42
    block                          shift and go to state 24
    method_body                    shift and go to state 26
    reference_type                 shift and go to state 45
    type                           shift and go to state 27
    method_modifiers               shift and go to state 47
    field_modifiers                shift and go to state 30
    prefix                         shift and go to state 31
    type_name                      shift and go to state 51
    non_array_type                 shift and go to state 25
    constructor_declarator         shift and go to state 33
    type_parameter                 shift and go to state 50
    identifier                     shift and go to state 49

state 23

    (34) type_name -> proper_identifier .

    IDENTIFIER      reduce using rule 34 (type_name -> proper_identifier .)
    LBRACKET        reduce using rule 34 (type_name -> proper_identifier .)


state 24

    (66) method_body -> block .

    RBRACE          reduce using rule 66 (method_body -> block .)
    TILDE           reduce using rule 66 (method_body -> block .)
    TERMINATOR      reduce using rule 66 (method_body -> block .)
    PUBLIC          reduce using rule 66 (method_body -> block .)
    PRIVATE         reduce using rule 66 (method_body -> block .)
    INT             reduce using rule 66 (method_body -> block .)
    CHAR            reduce using rule 66 (method_body -> block .)
    LBRACE          reduce using rule 66 (method_body -> block .)
    IDENTIFIER      reduce using rule 66 (method_body -> block .)
    OBJECT          reduce using rule 66 (method_body -> block .)


state 25

    (39) array_type -> non_array_type . LBRACKET RBRACKET

    LBRACKET        shift and go to state 55


state 26

    (57) method_declaration -> method_body .

    RBRACE          reduce using rule 57 (method_declaration -> method_body .)
    TILDE           reduce using rule 57 (method_declaration -> method_body .)
    TERMINATOR      reduce using rule 57 (method_declaration -> method_body .)
    PUBLIC          reduce using rule 57 (method_declaration -> method_body .)
    PRIVATE         reduce using rule 57 (method_declaration -> method_body .)
    INT             reduce using rule 57 (method_declaration -> method_body .)
    CHAR            reduce using rule 57 (method_declaration -> method_body .)
    LBRACE          reduce using rule 57 (method_declaration -> method_body .)
    IDENTIFIER      reduce using rule 57 (method_declaration -> method_body .)
    OBJECT          reduce using rule 57 (method_declaration -> method_body .)


state 27

    (23) field_declaration -> type . variable_declarators TERMINATOR
    (40) non_array_type -> type .
    (44) variable_declarators -> . variable_declarator
    (45) variable_declarators -> . variable_declarators COMMA variable_declarator
    (46) variable_declarator -> . identifier
    (47) variable_declarator -> . identifier EQUALS variable_initializer
    (15) identifier -> . IDENTIFIER

    LBRACKET        reduce using rule 40 (non_array_type -> type .)
    IDENTIFIER      shift and go to state 12

    variable_declarators           shift and go to state 57
    variable_declarator            shift and go to state 58
    identifier                     shift and go to state 56

state 28

    (42) type_parameter -> INT .

    IDENTIFIER      reduce using rule 42 (type_parameter -> INT .)
    LBRACKET        reduce using rule 42 (type_parameter -> INT .)


state 29

    (78) destructor_declaration -> TILDE . identifier LPAREN RPAREN destructor_body
    (15) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 12

    identifier                     shift and go to state 59

state 30

    (22) field_declaration -> field_modifiers . type variable_declarators TERMINATOR
    (25) field_modifiers -> field_modifiers . field_modifier
    (28) type -> . reference_type
    (29) type -> . type_parameter
    (26) field_modifier -> . PUBLIC
    (27) field_modifier -> . PRIVATE
    (30) reference_type -> . class_type
    (31) reference_type -> . array_type
    (41) type_parameter -> . identifier
    (42) type_parameter -> . INT
    (43) type_parameter -> . CHAR
    (32) class_type -> . type_name
    (33) class_type -> . OBJECT
    (39) array_type -> . non_array_type LBRACKET RBRACKET
    (15) identifier -> . IDENTIFIER
    (34) type_name -> . proper_identifier
    (40) non_array_type -> . type
    (35) proper_identifier -> . identifier
    (36) proper_identifier -> . prefix identifier
    (37) prefix -> . identifier MEMBERACCESS
    (38) prefix -> . prefix identifier MEMBERACCESS

    PUBLIC          shift and go to state 62
    PRIVATE         shift and go to state 61
    INT             shift and go to state 28
    CHAR            shift and go to state 44
    OBJECT          shift and go to state 43
    IDENTIFIER      shift and go to state 12

    reference_type                 shift and go to state 45
    type                           shift and go to state 63
    field_modifier                 shift and go to state 60
    array_type                     shift and go to state 34
    prefix                         shift and go to state 31
    identifier                     shift and go to state 64
    proper_identifier              shift and go to state 23
    class_type                     shift and go to state 32
    non_array_type                 shift and go to state 25
    type_parameter                 shift and go to state 50
    type_name                      shift and go to state 51

state 31

    (36) proper_identifier -> prefix . identifier
    (38) prefix -> prefix . identifier MEMBERACCESS
    (15) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 12

    identifier                     shift and go to state 65

state 32

    (30) reference_type -> class_type .

    IDENTIFIER      reduce using rule 30 (reference_type -> class_type .)
    LBRACKET        reduce using rule 30 (reference_type -> class_type .)


state 33

    (73) constructor_declaration -> constructor_declarator . constructor_body
    (76) constructor_body -> . block
    (77) constructor_body -> . TERMINATOR
    (81) block -> . LBRACE RBRACE

    TERMINATOR      shift and go to state 67
    LBRACE          shift and go to state 48

    block                          shift and go to state 66
    constructor_body               shift and go to state 68

state 34

    (31) reference_type -> array_type .

    IDENTIFIER      reduce using rule 31 (reference_type -> array_type .)
    LBRACKET        reduce using rule 31 (reference_type -> array_type .)


state 35

    (21) class_member_declaration -> destructor_declaration .

    RBRACE          reduce using rule 21 (class_member_declaration -> destructor_declaration .)
    TILDE           reduce using rule 21 (class_member_declaration -> destructor_declaration .)
    TERMINATOR      reduce using rule 21 (class_member_declaration -> destructor_declaration .)
    PUBLIC          reduce using rule 21 (class_member_declaration -> destructor_declaration .)
    PRIVATE         reduce using rule 21 (class_member_declaration -> destructor_declaration .)
    INT             reduce using rule 21 (class_member_declaration -> destructor_declaration .)
    CHAR            reduce using rule 21 (class_member_declaration -> destructor_declaration .)
    LBRACE          reduce using rule 21 (class_member_declaration -> destructor_declaration .)
    IDENTIFIER      reduce using rule 21 (class_member_declaration -> destructor_declaration .)
    OBJECT          reduce using rule 21 (class_member_declaration -> destructor_declaration .)


state 36

    (19) class_member_declaration -> method_declaration .

    RBRACE          reduce using rule 19 (class_member_declaration -> method_declaration .)
    TILDE           reduce using rule 19 (class_member_declaration -> method_declaration .)
    TERMINATOR      reduce using rule 19 (class_member_declaration -> method_declaration .)
    PUBLIC          reduce using rule 19 (class_member_declaration -> method_declaration .)
    PRIVATE         reduce using rule 19 (class_member_declaration -> method_declaration .)
    INT             reduce using rule 19 (class_member_declaration -> method_declaration .)
    CHAR            reduce using rule 19 (class_member_declaration -> method_declaration .)
    LBRACE          reduce using rule 19 (class_member_declaration -> method_declaration .)
    IDENTIFIER      reduce using rule 19 (class_member_declaration -> method_declaration .)
    OBJECT          reduce using rule 19 (class_member_declaration -> method_declaration .)


state 37

    (67) method_body -> TERMINATOR .

    RBRACE          reduce using rule 67 (method_body -> TERMINATOR .)
    TILDE           reduce using rule 67 (method_body -> TERMINATOR .)
    TERMINATOR      reduce using rule 67 (method_body -> TERMINATOR .)
    PUBLIC          reduce using rule 67 (method_body -> TERMINATOR .)
    PRIVATE         reduce using rule 67 (method_body -> TERMINATOR .)
    INT             reduce using rule 67 (method_body -> TERMINATOR .)
    CHAR            reduce using rule 67 (method_body -> TERMINATOR .)
    LBRACE          reduce using rule 67 (method_body -> TERMINATOR .)
    IDENTIFIER      reduce using rule 67 (method_body -> TERMINATOR .)
    OBJECT          reduce using rule 67 (method_body -> TERMINATOR .)


state 38

    (20) class_member_declaration -> constructor_declaration .
